# crabtalk

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
app/cli/src/runner/: gateway.rs
app/daemon/: Cargo.toml
app/daemon/src/: config.rs  lib.rs
app/daemon/src/gateway/: builder.rs  mod.rs  serve.rs  server.rs
channel/router/: Cargo.toml
channel/router/src/: lib.rs
channel/telegram/: Cargo.toml
channel/telegram/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/cmd/: daemon.rs  mod.rs
crates/cli/src/repl/: command.rs  mod.rs  runner.rs
crates/core/: Cargo.toml
crates/core/prompts/: compact.md  memory.md
crates/core/src/: lib.rs  paths.rs
crates/core/src/agent/: builder.rs  compact.rs  mod.rs  parser.rs  tool.rs
crates/core/src/model/: stream.rs  tool.rs
crates/core/src/protocol/api/: client.rs
crates/core/src/runtime/: hook.rs
crates/daemon/: Cargo.toml
crates/daemon/prompts/: memory.md  walrus.md
crates/daemon/src/config/: agent.rs  default.rs  loader.rs  mod.rs  model.rs
crates/daemon/src/daemon/: builder.rs  event.rs  mod.rs  protocol.rs
crates/daemon/src/ext/hub/: manifest.rs  mod.rs
crates/daemon/src/hook/: mod.rs
crates/daemon/src/hook/mcp/: bridge.rs  handler.rs  mod.rs  tool.rs
crates/daemon/src/hook/memory/: config.rs  dispatch.rs  lance.rs  mod.rs  tool.rs
crates/daemon/src/hook/os/: config.rs  mod.rs  tool.rs
crates/daemon/src/hook/skill/: handler.rs  mod.rs  tool.rs
crates/daemon/src/hook/task/: config.rs  mod.rs  registry.rs  tool.rs
crates/model/: Cargo.toml  build.rs
crates/model/codegen/: emit.rs  mod.rs  parse.rs
crates/model/local/: mod.rs  provider.rs  registry.rs
crates/model/registry/: cpu.toml  metal.toml  models.toml
crates/model/remote/openai/: mod.rs
crates/model/src/: config.rs  lib.rs  manager.rs  provider.rs
crates/protocol/: Cargo.toml
crates/protocol/src/api/: client.rs  server.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: hook.rs  lib.rs
hook/cron/: Cargo.toml
hook/cron/src/: client.rs  hook.rs  lib.rs
hook/mcp/: Cargo.toml
hook/mcp/src/: lib.rs
hook/memory/src/: lib.rs  tools.rs
hook/memory/src/sqlite/: memory.rs  mod.rs
hook/skill/: Cargo.toml
hook/skill/src/: loader.rs
protocol/channel/: Cargo.toml
protocol/channel/src/: lib.rs
protocol/socket/: Cargo.toml
protocol/socket/src/: client.rs  server.rs
