[package]
name = "walrus-daemon"
description = "The Walrus daemon"
documentation = "https://docs.rs/walrus-daemon"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
local = ["model/local"]
metal = ["model/metal"]
cuda = ["model/cuda"]

[dependencies]
channel.workspace = true
mcp.workspace = true
memory.workspace = true
model.workspace = true
protocol.workspace = true
router.workspace = true
runtime.workspace = true
skill.workspace = true
socket.workspace = true
wcore.workspace = true
wcron.workspace = true

# crates.io
anyhow.workspace = true
async-stream.workspace = true
compact_str.workspace = true
dirs.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
