[package]
name = "walrus-model"
description = "Walrus LLM provider implementations"
documentation = "https://docs.rs/walrus-model"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
local = ["dep:mistralrs", "dep:dirs", "dep:hf-hub", "dep:sysinfo"]
metal = ["local", "mistralrs/metal"]
cuda = ["local", "mistralrs/cuda"]

[dependencies]
wcore.workspace = true

# crates.io
anyhow.workspace = true
async-stream.workspace = true
compact_str.workspace = true
futures-core.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# optional dependencies
dirs = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
mistralrs = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }

[build-dependencies]
toml = { workspace = true }
serde = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
